--- a/build.gradle
+++ b/build.gradle
@@ -31,3 +31,11 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
 }
+
+jar {
+	enabled = true
+}
+
+springBoot {
+	mainClassName = 'com.onlinetool.onlinetool.OnlinetoolApplication'
+}
