--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,8 @@
+---
 applications:
- name: OnlineTool
- path: build/libs/onlinetool.jar
- domain: cfapps.io
- memory: 512m
- instances: 1
-
+   name: OnlineTool
+   path: build/libs/onlinetool.jar
+   domain: cfapps.io
+   memory: 256M
+   instances: 1
+...
