--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 ---
 applications:
-   name: OnlineTool
+-  name: OnlineTool
    path: build/libs/onlinetool.jar
    domain: cfapps.io
-   memory: 256M
+   memory: 512M
    instances: 1
 ...
