--- a/manifest.yml
+++ b/manifest.yml
@@ -3,6 +3,6 @@ applications:
 -  name: OnlineTool
    path: build/libs/onlinetool.jar
    domain: cfapps.io
-   memory: 512M
+   memory: 1GB
    instances: 1
 ...
